--- a/client/src/pages/courses/Courses.css
+++ b/client/src/pages/courses/Courses.css
@@ -35,7 +35,7 @@
 .course-card {
   position: relative;
   padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px rgb(0, 0, 0);
   border-radius: 8px;
   margin: 10px;
   width: 300px;
