--- a/client/src/components/Login/login.css
+++ b/client/src/components/Login/login.css
@@ -60,6 +60,7 @@ body {
   border-radius: 4px;
   font-size: 16px;
   transition: border-color 0.3s, box-shadow 0.3s; /* Transition for focus effect */
+  text-align: right;
 }
 
 .label-input-login input:focus {
