--- a/client/src/components/Profile/purchases/MyPurchases.css
+++ b/client/src/components/Profile/purchases/MyPurchases.css
@@ -98,12 +98,12 @@ body, html {
 
 /* Table Head */
 .purchases-table th {
-    background-color: #1e88e5;
+    background-color: #030303;
     color: white;
     font-weight: bold;
     text-transform: uppercase;
     padding: 15px;
-    text-align: left;
+    text-align: center;
     animation: fadeInUp 1s ease-in-out; /* הוספת אנימציה */
 }
 
