--- a/client/src/components/admin/Inquiries/Inquiries.css
+++ b/client/src/components/admin/Inquiries/Inquiries.css
@@ -53,7 +53,7 @@ body, html {
 }
 
 .inquiries-list th, .inquiries-list td {
-  text-align: left;
+  text-align: center;
   padding: 15px 25px;
   border-bottom: 1px solid #dfe3e8;
 }
