--- a/client/src/components/admin/courses/coursesList.css
+++ b/client/src/components/admin/courses/coursesList.css
@@ -14,6 +14,7 @@ body, html {
   justify-content: center;
   align-items: center;
   min-height: 100vh; /* גובה מינימלי של 100% למסך */
+  
 }
 
 /* Courses List Container */
@@ -25,6 +26,7 @@ body, html {
   border-radius: 16px;
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1); /* צללים עדינים */
   transition: transform 0.3s, box-shadow 0.3s;
+  
 }
 
 .courses-list:hover {
@@ -49,10 +51,12 @@ body, html {
   border-collapse: collapse;
   margin-top: 30px;
   font-size: 1em;
+  
+  
 }
 
 .courses-list th, .courses-list td {
-  text-align: left;
+  text-align: center;
   padding: 15px 25px;
   border-bottom: 1px solid #dfe3e8;
 }
@@ -63,6 +67,7 @@ body, html {
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 1px;
+  
 }
 
 .courses-list tr:nth-child(even) {
@@ -81,8 +86,9 @@ body, html {
   border-radius: 50px;
   cursor: pointer;
   transition: background 0.3s, transform 0.3s, box-shadow 0.3s;
-  margin-right: 50px;
+  margin-right: 0px;
   background: linear-gradient(to right, #fbffff, #969393);
+  
 
 }
 
@@ -90,6 +96,7 @@ body, html {
 .courses-list button.delete {
   background: linear-gradient(to right, #e74c3c, #c0392b);
   color: white;
+  
 }
 
 .courses-list button.delete:hover {
@@ -110,10 +117,12 @@ body, html {
 .courses-list button.edit:hover {
   background: #95a5a6;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+  
 }
 
 .courses-list button.edit:active {
   transform: translateY(3px);
+  
 }
 
 /* Error Message */
