--- a/client/src/components/admin/users/userList.css
+++ b/client/src/components/admin/users/userList.css
@@ -6,6 +6,7 @@ body, html {
   font-family: 'Poppins', sans-serif;
   background: linear-gradient(to bottom right, #e0eafc, #cfdef3);
   color: #333;
+  
 }
 
 /* Wrapper to center User List */
@@ -26,6 +27,7 @@ body, html {
   border-radius: 16px;
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s, box-shadow 0.3s;
+  
 }
 
 .user-list:hover {
@@ -53,7 +55,7 @@ body, html {
 }
 
 .user-list th, .user-list td {
-  text-align: left;
+  text-align: center;
   padding: 15px 25px;
   border-bottom: 1px solid #dfe3e8;
 }
@@ -64,6 +66,7 @@ body, html {
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 1px;
+  text-align: center;
 }
 
 .user-list tr:nth-child(even) {
