--- a/client/src/components/admin/workshops/workshopsList.css
+++ b/client/src/components/admin/workshops/workshopsList.css
@@ -52,7 +52,7 @@ body, html {
 }
 
 .workshops-list th, .workshops-list td {
-  text-align: left;
+  text-align: center;
   padding: 15px 25px;
   border-bottom: 1px solid #dfe3e8;
 }
@@ -81,7 +81,7 @@ body, html {
   border-radius: 50px;
   cursor: pointer;
   transition: background 0.3s, transform 0.3s, box-shadow 0.3s;
-  margin-right: 50px;
+  margin-right: 0px;
   background: linear-gradient(to right, #fbffff, #969393);
 
 }
