--- a/client/src/pages/personalProcess/personalProcess.css
+++ b/client/src/pages/personalProcess/personalProcess.css
@@ -25,7 +25,7 @@ html, body {
     background-color: #a9cce3;
     text-align: center;
     padding: 60px 0;
-    color: #000000;
+    color: #fffefe;
     position: sticky;
     top: 0;
     z-index: 10;
