--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -23,9 +23,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  width: 500px;
-  margin-left: 700px;
-  animation: fadeInUp 1s ease-in-out; /* הוספת האנימציה */
+  animation: fadeInUp 1s ease-in-out;
 }
 
 .profile-container {
@@ -109,7 +107,7 @@ body {
   cursor: pointer;
   transition: background-color 0.3s ease;
   text-decoration: none;
-  margin: 0 10px; /* רווח בין הכפתורים */
+  margin: 0 20px; /* רווח בין הכפתורים */
 }
 
 .edit-profile-button:hover,
