--- a/client/src/pages/courses/Payment/coursePayment.css
+++ b/client/src/pages/courses/Payment/coursePayment.css
@@ -54,21 +54,22 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
+  
 }
 
 /* עיצוב כפתור הרכישה */
 .submit-button {
   width: 100%;
   padding: 12px;
-  background-color: #007bff; /* צבע כחול לכפתור */
-  color: white;
+  background-color: #0b76ef; /* צבע כחול לכפתור */
+  color: rgb(255, 250, 250);
   font-size: 1.1rem;
   font-weight: bold;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* צל לכפתור */
+  box-shadow: 0 4px 8px rgb(0, 0, 0); /* צל לכפתור */
 }
 
 .submit-button:hover {
